<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_count"
        android:title=""
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_fullscreen"
        android:icon="@drawable/ic_menu_fullscreen"
        android:title="@string/full_screen"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_bookmark"
        android:icon="@drawable/ic_menu_bookmarks"
        android:title="@string/all_bookmarks"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_bookmark_add"
        android:icon="@drawable/ic_menu_bookmark"
        android:title="@string/bookmark_page"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_index"
        android:icon="@drawable/ic_menu_bookmark"
        android:title="@string/index_page"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_print"
        android:icon="@drawable/ic_menu_bookmark"
        android:title="@string/print_page"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_menu_bookmark"
        android:title="@string/share_pdf"
        app:showAsAction="never" />

</menu>